--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,8 +1,10 @@
 .video-container {
   width: 1800px;
+  max-height: 1000px;
   display: block;
   margin: 0 auto;
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .navigation {
@@ -12,8 +14,4 @@
 
 .video-nav-btn {
   margin-right: 25px;
-}
-
-.temp-img {
-  max-height: 1000px;
 }
