--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,14 +12,14 @@
     <div class="col-md-12">
       <div class="navigation">
         <div *ngFor="let category of resourceLibrary" class="btn-group dropup">
-          <button type="button" class="btn btn-outline-primary" [value]="category.videos[0].src" (click)="changeVideo($event)">
+          <button type="button" class="btn btn-outline-primary" [value]="category.resources[0].src" (click)="changeVideo($event)">
             {{ category.categoryName }}
           </button>
           <button type="button" class="btn btn-outline-primary dropdown-toggle dropdown-toggle-split video-nav-btn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <span class="sr-only">Toggle Dropdown</span>
           </button>
           <div class="dropdown-menu">
-            <button *ngFor="let video of category.videos | reverse" class="dropdown-item" (click)="changeVideo($event)" [value]="video.src">{{ video.name }}</button>
+            <button *ngFor="let video of category.resources | reverse" class="dropdown-item" (click)="changeVideo($event)" [value]="video.src">{{ video.btnName }}</button>
           </div>
         </div>
       </div>
