--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,8 +2,7 @@
   <div class="col-md-12">
     <div class="video-container">
       <div class="padding-zero embed-responsive embed-responsive-16by9">
-        <video id="video" class="embed-responsive-item" [src]="sanitizer.bypassSecurityTrustResourceUrl(currentResource)" allowfullscreen autoplay onended="angular.element(this).scope().autoChangeVideo()"></video>
-        <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/bctaWQTYHJc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen autoplay></iframe> -->
+        <video id="video" class="embed-responsive-item" [src]="currentVideo" autoplay (ended)="autoChangeVideo()"></video>
       </div>
     </div>
   </div>
@@ -12,16 +11,10 @@
   <div class="row">
     <div class="col-md-12">
       <div class="navigation">
-        <div *ngFor="let category of resourceLibrary" class="btn-group dropup">
-          <button type="button" class="btn btn-outline-primary" [value]="category.resources[0].src" (click)="changeVideo($event)">
-            {{ category.categoryName }}
+        <div *ngFor="let video of videoLibrary" class="btn-group dropup">
+          <button type="button" class="btn btn-outline-primary" [value]="video.id" (click)="changeVideo($event)">
+            {{ video.buttonName }}
           </button>
-          <button type="button" class="btn btn-outline-primary dropdown-toggle dropdown-toggle-split video-nav-btn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span class="sr-only">Toggle Dropdown</span>
-          </button>
-          <div class="dropdown-menu">
-            <button *ngFor="let resource of category.resources" class="dropdown-item" (click)="changeVideo($event)" [value]="resource.src">{{ resource.btnName }}</button>
-          </div>
         </div>
       </div>
     </div>
