--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-md-12">
     <div class="video-container">
-      <div class="padding-zero embed-responsive embed-responsive-16by9">
-        <video id="video" class="embed-responsive-item" [src]="currentVideo" autoplay (ended)="autoChangeVideo()"></video>
+      <div class="embed-responsive embed-responsive-16by9">
+        <video id="video" class="embed-responsive-item" [src]="currentVideo" autoplay controls (ended)="autoChangeVideo()"></video>
       </div>
     </div>
   </div>
